<resources>
    <string name="go_to_settings">Go to settings</string>
    <string name="do_not_show_again">Do not show again</string>
    <string name="about_us">About Us</string>
    <string name="warning">Warning!</string>
    <string name="alert">Alert!</string>
    <string name="gps">GPS Disabled!</string>
    <string name="gps_warning">Please Enable GPS/Location Service and set it to High Accuracy from phone settings</string>
    <string name="proceed">Proceed</string>
    <string name="warning_status_a">Please mark your status as available before taking any action against orders.</string>
    <string name="payment_conifrmation">Is order payment Received?</string>
    <string name="warning_status_acceptance">Sorry, you were unable to accept order in given time slot. It is now assigned to another rider.Please refresh your order list for any pending orders assigned to you.</string>
    <string name="warning_status">Please make sure the delivery of active orders before getting unavailable.</string>
    <string name="warning_logout">Please make sure the delivery of active orders before logout.</string>
    <string name="warning_status_p">Please respond to assigned orders before getting unavailable.</string>
    <string name="warning_logout_p">Please respond to assigned orders before logout.</string>
    <string name="app_name">Darian</string>
    <string name="version">Darian - Beta</string>
    <string name="disclaimer_text" translatable="false">This app collects location data to enable accurate assignment of orders to the nearest available Rider for quick service delivery even when the app is closed or not in use.”</string>
    <string name="localename" />
    <string name="language">پښتو</string>
    <string name="pashto">پښتو</string>
    <string name="skip">Skip</string>
    <string name="change_to">Change to &language;</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="action_settings">Settings</string>
    <string name="login">Login</string>
    <string name="please_enter_phone_num">Please enter phone number for 6-digit verification code</string>
    <string name="send_code">Send Code</string>
    <string name="or">or</string>
    <string name="login_with_social_account">Login with your social media account</string>
    <string name="login_with_facebook">Login with Facebook</string>
    <string name="change_language">Change Language</string>
    <string name="status_change" translatable="false">Are you sure to switch your current status?</string>
    <string name="logout" translatable="false">Are you sure to logout from app?</string>
    <string name="change_language_detail">Please select your default language from the below provided languages:</string>
    <string name="english">English</string>
    <string name="food_delivery">Food Delivery</string>
    <string name="food_delivery_detail">Get your food delievered at doorsteps with our fastest rider.</string>
    <string name="general_delivery">General Delivery</string>
    <string name="general_delivery_detail">Get your parcels, daily items and parcel at your doorstep.</string>
    <string name="track_order">Track Order</string>
    <string name="track_order_detail">Track how close your order is to you.</string>
    <string name="confirm_your_number">Confirm Your Number</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="edit">Edit</string>
    <string name="correct_number">Is this your correct Number?</string>
    <string name="provide_valid_field">Provide a valid field!</string>
    <string name="verification_code">Verification Code</string>
    <string name="please_enter_vcode">Please enter 6-digit verification code</string>
    <string name="resend_code_in">Resend code in</string>
    <string name="pin">******</string>
    <string name="verify">Verify</string>
    <string name="invalid_verification_code_size">Enter 6-digit pin first!</string>
    <string name="profile">Profile Details</string>
    <string name="profile_details">Please enter your profile details and upload picture</string>
    <string name="full_name">Full  Name</string>
    <string name="select_dob">Select Date of Birth</string>
    <string name="select_gender">Select Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="email">Email</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="save_profile">Save</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_cart">Cart</string>
    <string name="search_hint">Search items or outlets</string>
    <string name="featured">Featured</string>
    <string name="whats_new">New</string>
    <string name="all_outlets">All</string>
    <string name="search">Search....</string>
    <string name="no_data">No data found</string>
    <string name="title_activity_product">ProductActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
    <string name="my_cart">My Cart</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="action_search">Search</string>
    <string name="minimum_ammount">Minimum Amount</string>
    <string name="delivery_fee">Delivery Fee</string>
    <string name="rating">Rating</string>
    <string name="action_filter">Filter</string>
    <string name="how_many">How Many?</string>
    <string name="select_quantity">Select the quantity you want to order</string>
    <string name="count_zero">Your minimum quantity should be 1</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="remove_from_cart">Remove</string>
    <string name="count_empty">Enter a valid quantity!</string>
    <string name="drop_off_point">Drop off Point</string>
    <string name="drop_off_contact">Drop off Contact</string>
    <string name="sub_total">Sub-total</string>
    <string name="total">Total</string>
    <string name="payment_location">Payment Location</string>
    <string name="payment_method">Payment Method</string>
    <string name="promo_code">Promo Code (if any)</string>
    <string name="submit">Submit</string>
    <string name="checkout_cart">Checkout Cart</string>
    <string name="discart_cart">Discart Cart</string>
    <string name="location_confirm_title">Confirm location</string>
    <string name="location_confirm">Is this your final selected location?</string>
    <string name="select_location">Select Location</string>
    <string name="select_location_first">Select Location First!</string>
    <string name="select_location_from_map">Select from map</string>
    <string name="no_saved_location">No saved locations found!</string>
    <string name="update">Update</string>
    <string name="cancel">Cancel</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="disclaimer">Disclaimer</string>
    <string name="select_phone">Select Phone</string>
    <string name="add_promo_code">Promo Code</string>
    <string name="delivery_location">Delivery Location</string>
    <string name="tax">Tax</string>
    <string name="locale_rs">Rs.</string>
    <string name="select_payment_location_first">Select payment location first</string>
    <string name="select_delivery_location_first">Select Delivery Location First</string>
    <string name="something_went_wrong">Something went wrong! plz try again later...</string>
    <string name="estimated_delivery_time">Estimated Delivery Time</string>
    <string name="estimated_delivery_fee">Estimated Delivery Fee</string>
    <string name="created_by">Created By</string>
    <string name="recipient_contact">Recipient Contact</string>
    <string name="reference_id">Reference ID</string>
    <string name="recipient_name_optional">Recipient Name (optional)</string>
    <string name="multiple_locations">Multiple Locations</string>
    <string name="current_location">Current Location</string>
    <string name="no_location_found">No Location Found</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_number">Enter Number</string>
    <string name="tap_on_map_to_get_location">Tap on map to select location!</string>
    <string name="provide_payment_contact_details">Provide Payment Contact Details First!</string>
    <string name="provide_delivery_contact_details">Provide Delivery Contact Details First!</string>
    <string name="title_activity_rider_tracking">OrderTracking</string>
    <string name="recipient_name">Recipient Name</string>
    <string name="discount">Discount</string>
    <string name="share_order_location">Share Order Details</string>
    <string name="active_orders">Active Orders</string>
    <string name="confirmation">Confirmation</string>
    <string name="reject">Reject</string>
    <string name="acceptance_bonus">Acceptance Bonus</string>
    <string name="rejection_deduction">Rejection Deduction</string>
    <string name="title_activity_order_detail">OrderDetailActivity</string>
    <string name="details">Details</string>
    <string name="delivered">Delivered</string>
    <string name="completed">Collect Payment</string>
    <string name="invoice">Show Invoice</string>
    <string name="title_activity_invoice">Invoice</string>
    <string name="collect">Collect Cash</string>
    <string name="resend_code">Resend Code</string>
    <string name="ok">Ok</string>
    <string name="default_notification_channel_id">0</string>
    <string name="ICT_NOTIFICATION_ID">0</string>
    <string name="invalid_phone_number">Your phone number is Invalid!</string>
    <string name="title_activity_rating">RatingActivity</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="how_was_your_last_order">How was your experience with the Customer?</string>
    <string name="feedback">Feedback</string>
    <string name="no_internet_connection_found">No Data Found</string>
    <string name="no_data_found">No Orders found</string>
    <string name="pickup_location">Pickup Location</string>
    <string name="fragile">Fragile</string>
    <string name="huawei_headline">ProtectedApp Alert</string>
    <string name="huawei_text">Your Application wont work in backgrount unless you enable app in \"Protected Apps\".</string>
    <string name="go_to_protected">Allow</string>
    <string name="delivery_location_additional">Additional Location Details</string>
    <string name="addons">Add-ons</string>
    <string name="no_addons">No add-ons</string>
    <string name="enable">Enable</string>
    <string name="invalid_firebase_token">Invalid Firebase Token</string>
    <string name="invalid_user">Invalid User</string>
    <string name="estimated_price">Estimated Price</string>
    <string name="twenty_k">PKR 20 k</string>
    <string name="fifteen_k">PKR 15 k</string>
    <string name="ten_k">PKR 10 k</string>
    <string name="five_k">PKR 05 k</string>
    <string name="zero_k">PKR 0</string>
    <string name="only_for_riders">"Only for Darewro Riders"</string>
    <string name="check_internet_connection">Check your internet connection</string>
    <string name="total_oders">Orders</string>
    <string name="total_revenue">Revenue</string>
    <string name="revenue_cycle">Revenue Cycle Date</string>
    <string name="applicable_bonus">Performance Bonus</string>
    <string name="current_bonus">Revenue for the Cycle</string>
    <string name="close">Close</string>
    <string name="online_time">Online Timing</string>
    <string name="today_trips">Today Trips</string>
    <string name="extra_trip_bonus">Extra Trips Bonus</string>
    <string name="multiple_order_bonus">Multiple Order Bonus</string>
</resources>