<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:id="@+id/root_layout"
    android:layoutDirection="ltr"
    tools:appCompatActivity=".view.activities.ProfileActivity">

    <LinearLayout
        android:id="@+id/bottom_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/white"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/profile"
            android:textColor="@color/app_red"
            android:textSize="24dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:gravity="center"
            android:text="@string/profile_details"
            android:textColor="@color/grey_semitransparent"
            android:textSize="14dp" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="10dp">

            <RelativeLayout
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center">

                <com.darewro.riderApp.view.customViews.RoundedEdgesImageView
                    android:id="@+id/profile_pic"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_centerHorizontal="true"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_account_circle"
                    android:layerType="software"
                    android:clickable="true"/>

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_alignParentRight="true"
                    android:layout_margin="5dp"
                    android:background="@drawable/circle_grey"
                    android:backgroundTint="@color/white"
                    android:padding="3dp"
                    android:scaleType="centerInside"
                    android:src="@drawable/ic_add" />
            </RelativeLayout>
        </FrameLayout>

        <EditText
            android:id="@+id/full_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/full_name"
            android:textSize="14dp"
            android:inputType="textPersonName"
            android:singleLine="true" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:singleLine="true"
            android:textSize="14dp"/>

        <TextView
            android:id="@+id/dob"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:drawableRight="@drawable/ic_action_calendar"
            android:focusable="true"
            android:gravity="center_vertical"
            android:hint="@string/select_dob"
            android:inputType="none"
            android:padding="5dp"
            android:singleLine="true"
            android:textSize="14dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:padding="5dp"
            android:gravity="center_vertical"
            android:text="@string/select_gender"
            android:textColor="@color/grey_semitransparent"
            android:textSize="14dp" />

        <RadioGroup
            android:id="@+id/gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male" />

            <RadioButton
                android:id="@+id/female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="@string/female" />

        </RadioGroup>


        <Button
            android:id="@+id/save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/button_selector"
            android:text="@string/save_profile"
            android:textAllCaps="false"
            android:textColor="@color/white" />

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/bottom_layout">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/main_background" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:adjustViewBounds="true"
            android:background="@color/transparent"
            android:scaleType="centerInside"
            android:src="@drawable/darewro_logo" />

    </FrameLayout>
</RelativeLayout>