<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:elevation="0dp"
    android:foreground="@drawable/selectable_drawable_ripple"
    android:stateListAnimator="@animator/lift_on_touch"
    app:cardCornerRadius="0dp"
    app:cardPreventCornerOverlap="false"
    app:cardUseCompatPadding="false">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/partner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/app_red"
            android:paddingLeft="10dp"
            android:paddingTop="3dp"
            android:paddingRight="10dp"
            android:paddingBottom="3dp"
            android:text=""
            android:textColor="@color/white"
            android:textSize="12dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/recipient_contact"
                    android:textColor="@color/dark_grey"
                    android:textSize="12dp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/recipient_name"
                    android:textColor="@color/dark_grey"
                    android:textSize="12dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.darewro.rider.view.customViews.UnderlinedTextView
                    android:id="@+id/number"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/recipient_contact"
                    android:textColor="@color/darker_grey"
                    android:textSize="14dp" />

                <TextView
                    android:id="@+id/name"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/recipient_name_optional"
                    android:textColor="@color/grey2"
                    android:textSize="14dp" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginTop="10dp"
                android:background="@color/black" />

            <TextView
                android:id="@+id/location"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:layout_weight="1"
                android:drawableRight="@drawable/payment"
                android:ellipsize="marquee"
                android:gravity="center_vertical"
                android:marqueeRepeatLimit="3"
                android:singleLine="true"
                android:text="@string/select_location"
                android:textColor="@color/dark_grey"
                android:textSize="18dp" />
        </LinearLayout>

    </LinearLayout>
</androidx.cardview.widget.CardView>