<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="false">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingTop="5dp">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                >
                <TextView
                    android:id="@+id/name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:includeFontPadding="false"
                    android:letterSpacing="-0.07"
                    android:text="@string/recipient_contact"
                    android:layout_marginRight="2dp"
                    android:textColor="@color/dark_grey"
                    android:textSize="12dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/quantity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:includeFontPadding="false"
                    android:letterSpacing="-0.07"
                    android:text="@string/recipient_name"
                    android:textColor="@color/dark_grey"
                    android:textSize="12dp"
                    android:textStyle="bold" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/sub_total_lbl"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:includeFontPadding="false"
                        android:letterSpacing="-0.07"
                        android:text="@string/sub_total"
                        android:textColor="@color/dark_grey"
                        android:layout_marginRight="10dp"
                        android:textSize="12dp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/sub_total"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:includeFontPadding="false"
                        android:letterSpacing="-0.07"
                        android:text="@string/sub_total"
                        android:textColor="@color/dark_grey"
                        android:textSize="12dp"

                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/discount_lbl"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:includeFontPadding="false"
                        android:letterSpacing="-0.07"
                        android:text="@string/discount"
                        android:textColor="@color/dark_grey"
                        android:textSize="12dp"
                        android:layout_marginRight="10dp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/discount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:includeFontPadding="false"
                        android:letterSpacing="-0.07"
                        android:text="@string/discount"
                        android:textColor="@color/dark_grey"
                        android:textSize="12dp" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/total_lbl"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:includeFontPadding="false"
                        android:letterSpacing="-0.07"
                        android:text="@string/total"
                        android:textColor="@color/dark_grey"
                        android:layout_marginRight="10dp"
                        android:textSize="12dp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/total"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:includeFontPadding="false"
                        android:letterSpacing="-0.07"
                        android:text="@string/total"
                        android:textColor="@color/dark_grey"
                        android:textSize="12dp"
                        android:textStyle="bold"
                        />
                </LinearLayout>
            </LinearLayout>




            <CheckBox
                android:id="@+id/checked"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|right"
                android:includeFontPadding="false"
                android:letterSpacing="-0.07"
                android:text=""
                android:textSize="12dp" />
        </LinearLayout>

        <!--  <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="horizontal">

              <TextView
                  android:id="@+id/quantity"
                  android:layout_width="0dp"
                  android:layout_height="match_parent"
                  android:layout_weight="1"
                  android:drawableLeft="@drawable/payment"
                  android:text="@string/recipient_contact"
                  android:gravity="center_vertical"
                  android:drawablePadding="5dp"
                  android:textColor="@color/darker_grey"
                  android:textSize="14dp" />

          </LinearLayout>-->

    </LinearLayout>

</FrameLayout>
